views/scss/style.scss
$font-stack: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif;
$wrapper-width: 700px;

$header: #8260df;

$background-dark: #0d051f;
$foreground-dark: #fff9e8;

$background-light: #fdfdfd;
$foreground-light: #2f363d;

@media (prefers-color-scheme: dark) {
    body {
        color: $foreground-dark;
        background-color: $background-dark;
    }
}

@media (prefers-color-scheme: light) {
    body {
        color: $foreground-light;
        background-color: $background-light;
    }
}

@media only screen and (min-width: 900px) {
    .header{
        position: fixed;
        margin: 1em 0 0 1em !important;
        text-align: left;
    }
}

body {
    width: 100%;
    margin: 0;
    padding: 0;

    font: 16px $font-stack;
}

.header{
    margin: 1em 0 0 0;
    text-align: center;
    
    a{
        color: $header;
    }
}

.wrapper{
    max-width: $wrapper-width;
    padding: 1em;
    margin: auto;

    a{
        color: #085fca;
        text-decoration: none;
    }

    a:hover{
        text-decoration: underline;
    }

    .posts-list{
        padding: 1em 0;
        margin: 1em 0;
        list-style: none;
    }

    .post-date{
        color: #8a8a8a;
    }

    .post-id{
        color: #8a8a8a;
        margin: 0 1em 0 0;
    }
    
    .post-content{
        p{
            margin-bottom: 16px;
            line-height: 1.5;
            word-wrap: break-word;
            font-weight: lighter;
        }

        strong {
            font-weight: bold;
        }

        img {
            max-width: $wrapper-width;
            display: block;
            margin: 0 auto;
            border-radius: 4px;
        }
        
        code{
            padding: 0.1em;
            background: #dfdfdf;
            border-radius: 4px;
        }

        pre {
            code {
                padding: 0.5em 1em;
                background: #dfdfdf;
                border: 1px solid #999;
                border-radius: 0;
            }
        }

        blockquote{
            padding: 0.1 1em;
            background-color: #abd9e8;
            border-left: 0.5em solid #aeabab;
        }
    }
}

